kubernetes.yaml
# HTTPS no Auth required
kind: Deployment
apiVersion: apps/v1
metadata:
  name: api
  labels:
    app: api
    type: todostateful
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
      type: todostateful
  template:
    metadata:
      labels:
        app: api
        type: todostateful
    spec:
      containers:
        - name: api
          image: todostateful:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: todostateful
spec:
  ports:
    - name: http
      targetPort: 8000
      port: 80
  selector:
    app: api
    type: todostateful
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todostateful
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-cluster-issuer # https://cert-manager.io/docs/usage/ingress/
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - todostateful.localdev.me
      secretName: todostateful-local-cert-tls
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: todostateful
                port:
                  number: 80
    - host: todostateful.localdev.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: todostateful
                port:
                  number: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  labels:
    app: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb
        image: mongo
        ports:
          - containerPort: 27017
            name: mongodb
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
spec:
  selector:
    app: mongodb
  clusterIP: None
  ports:
    - name: mongodb
      port: 27017
      targetPort: 27017
